[tool.poetry]
name = "tnpy"
version = "0.1.1a3"
description = "Tensor Network algorithms implemented in python."
authors = ["Tan Tao-Lin <tanlin2013@gmail.com>"]
homepage = "https://github.com/tanlin2013/tnpy"
documentation = "https://tanlin2013.github.io/tnpy/"
license = "MIT"
readme = "README.md"
keywords = ["tensornetwork", "quantum-mechanics", "quantum-algorithms"]

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
toml = "^0.10.2"
tqdm = "^4.63.0"
numpy = ">=1.22, <1.24"
scipy = ">=1.1, <2.0"
primme = "3.2.1"
h5py = ">=3.6, <4.0"
graphviz = "0.20.1"
tensornetwork = "0.4.6"
autoray = ">=0.2, <0.4"
quimb = "1.4.0"
mkl-devel = { version = "2022.0.3", optional = true }
matplotlib = { version ="^3.5.2", optional = true }
networkx = { version ="^2.8.4", optional = true }

[tool.poetry.extras]
mkl = ["mkl-devel"]  # (https://github.com/tanlin2013/tnpy/issues/5)
drawing = ["matplotlib", "networkx"]

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.19.0"
commitizen = "^2.40.0"
vulture = ">=1.0"
bandit = ">=1.6"
safety = ">=1.8"
isort = ">=5.3"
flake8-bugbear = ">=19.8"
black = ">=18.3"
mypy = ">=0.730.0"
ipython = ">=7.7"
pytest = ">=5.0"
pytest-cov = ">=2.7"
pytest-mock = ">=1.10"
pep8-naming = ">=0.8.2"
cruft = ">=2.2"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^4.5.0"
sphinx-book-theme = "^0.3.2"
nbsphinx = "^0.8.8"
m2r2 = "^0.3.2"
pandoc = "^2.3"
portray = ">=1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
strict_optional = false

[tool.cruft]
skip = []
