[tool.poetry]
name = "tnpy"
version = "0.1.1a3"
description = "Tensor Network algorithms implemented in python."
authors = ["Tan Tao-Lin <tanlin2013@gmail.com>"]
homepage = "https://github.com/tanlin2013/tnpy"
documentation = "https://tanlin2013.github.io/tnpy/"
license = "MIT"
readme = "README.md"
keywords = ["tensornetwork", "quantum-mechanics", "quantum-algorithms"]

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
toml = "^0.10.2"
tqdm = "^4.63.0"
numpy = ">=1.22, <1.24"
scipy = ">=1.1, <2.0"
primme = "3.2.1"
h5py = ">=3.6, <4.0"
graphviz = "0.20.1"
tensornetwork = "0.4.6"
autoray = ">=0.2, <0.4"
quimb = "1.4.0"
mkl-devel = { version = "2023.0.0", optional = true }
matplotlib = { version ="^3.5.2", optional = true }
networkx = { version ="^2.8.4", optional = true }

[tool.poetry.extras]
mkl = ["mkl-devel"]  # (https://github.com/tanlin2013/tnpy/issues/5)
drawing = ["matplotlib", "networkx"]

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.19.0"
commitizen = "^2.35.0"
vulture = "^2.4"
bandit = "^1.7.4"
safety = "^2.3.4"
isort = "^5.11.0"
flake8-bugbear = "^22.10.25"
black = "^22.12.0"
mypy = "^0.990"
ipython = "^8.5.0"
pytest = "^7.1.2"
pytest-cov = "^4.0.0"
pytest-mock = "^3.9.0"
pep8-naming = "^0.13.0"
cruft = "^2.11.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^4.5.0"
sphinx-book-theme = "^0.3.2"
nbsphinx = "^0.8.8"
m2r2 = "^0.3.2"
pandoc = "^2.3"
portray = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
strict_optional = false

[tool.bandit]
skips = ["B101"]

[tool.cruft]
skip = []
