[tool.poetry]
name = "tnpy"
version = "0.1.1a3"
description = "Tensor Network algorithms implemented in python."
authors = ["Tan Tao-Lin <tanlin2013@gmail.com>"]
homepage = "https://github.com/tanlin2013/tnpy"
documentation = "https://tanlin2013.github.io/tnpy/"
license = "MIT"
readme = "README.md"
keywords = ["tensornetwork", "quantum-mechanics", "quantum-algorithms"]

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
toml = "^0.10.2"
tqdm = "^4.63.0"
numpy = "^1.22"
scipy = ">=1.1, <2.0"
primme = "3.2.1"
h5py = ">=3.6, <4.0"
graphviz = "0.20.1"
tensornetwork = "0.4.6"
numba = "^0.56.4"
llvmlite = "^0.39.1"
autoray = "^0.6.0"
quimb = "1.4.0"
mkl-devel = { version = "2023.0.0", optional = true }
matplotlib = { version ="^3.5.2", optional = true }
networkx = { version ="^3.0", optional = true }

[tool.poetry.extras]
mkl = ["mkl-devel"]  # (https://github.com/tanlin2013/tnpy/issues/5)
drawing = ["matplotlib", "networkx"]

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.0"
commitizen = "^2.35.0"
vulture = "^2.4"
bandit = "^1.7.4"
safety = "^2.3.4"
isort = "^5.11.0"
flake8-bugbear = "^23.1.14"
Flake8-pyproject = "^1.2.2"
black = "^23.1.0"
mypy = "^1.0.0"
ipython = "^8.5.0"
pytest = "^7.1.2"
pytest-cov = "^4.0.0"
pytest-mock = "^3.9.0"
pep8-naming = "^0.13.0"
cruft = "^2.12.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^4.5.0"
sphinx-book-theme = "^1.0.0"
nbsphinx = "^0.8.8"
m2r2 = "^0.3.2"
pandoc = "^2.3"
#portray = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.flake8]
count = true
max-line-length = 100
ignore = [
    "E203",
    "W503",
    "N803",
    "N806"
]

[tool.mypy]
ignore_missing_imports = true
strict_optional = false
plugins = ["numpy.typing.mypy_plugin"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover"]
omit = ["*tests*"]

[tool.bandit]
skips = ["B101"]

[tool.cruft]
skip = []
